# geocast

./: .gitignore  .pnp.cjs  .yarnrc.yml  AGENTS.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  Makefile  README.md  ROADMAP.md  STABILIZATION.md  docker-compose-dev.yaml  docker-compose.yaml  entrypoint.sh  index.html  jsconfig.json  main.js  package-lock.json  package.json  pyproject.toml  requirements.txt  skills-lock.json  tsconfig.json  vite.config.js
assets/scripts/: main.js  server.js
backend/: Dockerfile  package.json  tsconfig.json
backend/src/: index.html  server.js  server.ts
clients/blender/add-on/: index.json
clients/blender/geocast/: __init__.py  blender.py  blender_manifest.toml  bootstrap.py
docs/: ROADMAP.md  STABILIZATION.md  format.md
frontend/: Dockerfile  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: config.d.ts  config.js
frontend/src/: fullscreen.d.ts  room.js  room.ts  scene.js  scene.ts
src/: schema.py
src/exporters/: blender.py
src/geocast/exporters/: blender.py  bootstrap.py
test/: testscene.blend
test/data/: data.json
