[project]
name = "geocast"
version = "0.1.0"
description = "Cast geometry data from your local DCC to the web"
authors = [
    {name = "stackaby",email = "imaginary.unmolded792@sombra.mailer.me"}
]
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "bpy @ https://download.blender.org/pypi/bpy/bpy-4.5.6-cp311-cp311-macosx_11_0_x86_64.whl",
    "websockets (>=16.0,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
