[project]
name = "geocast"
version = "0.1.0"
description = "Cast geometry data from your local DCC to the web"
authors = [
    {name = "stackaby",email = "imaginary.unmolded792@sombra.mailer.me"}
]
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "websockets (>=16.0,<17.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fake-bpy-module-4-5 (>=20260128,<20260129)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pylint (>=4.0.4,<5.0.0)"
]
